[package]
name = "macro-bits"
version = "0.1.1"
edition = "2021"
description = "A crate for performing macro-based bit manipulation."
authors = ["Frostie314159"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Frostie314159/macro-bits"

[dependencies]
defile = "0.2.1"

[dev-dependencies]
bin-utils = "0.2.1"
